[gd_scene load_steps=3 format=3 uid="uid://csewfudf1m4xx"]

[ext_resource type="Script" uid="uid://c3wq213kt5dxe" path="res://Entities/Projectiles/Mob Projectiles/mob_projectile.gd" id="1_0785r"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ap673"]
radius = 6.0

[node name="MobProjectile" type="Area2D"]
script = ExtResource("1_0785r")

[node name="ProjectileSprite" type="Sprite2D" parent="."]
scale = Vector2(1.25, 1.042)

[node name="ProjectileCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ap673")

[node name="TTLTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TTLTimer" to="." method="_on_ttl_timer_timeout"]
